[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/characters/Slime/Slime.gd" type="Script" id=1]
[ext_resource path="res://Assets/characters/Slime/Attack/slime-attack-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/characters/Slime/Attack/slime-attack-4.png" type="Texture" id=3]
[ext_resource path="res://Assets/characters/Slime/Attack/slime-attack-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/characters/Slime/Attack/slime-attack-3.png" type="Texture" id=5]
[ext_resource path="res://Assets/characters/Slime/Attack/slime-attack-0.png" type="Texture" id=6]
[ext_resource path="res://Assets/characters/Slime/Damage/slime-hurt-2.png" type="Texture" id=7]
[ext_resource path="res://Assets/characters/Slime/Death/slime-die-3.png" type="Texture" id=8]
[ext_resource path="res://Assets/characters/Slime/Death/slime-die-2.png" type="Texture" id=9]
[ext_resource path="res://Assets/characters/Slime/Damage/slime-hurt-3.png" type="Texture" id=10]
[ext_resource path="res://Assets/characters/Slime/Damage/slime-hurt-0.png" type="Texture" id=11]
[ext_resource path="res://Assets/characters/Slime/Death/slime-die-1.png" type="Texture" id=12]
[ext_resource path="res://Assets/characters/Slime/Damage/slime-hurt-1.png" type="Texture" id=13]
[ext_resource path="res://Assets/characters/Slime/Death/slime-die-0.png" type="Texture" id=14]
[ext_resource path="res://Assets/characters/Slime/Idle/slime-idle-0.png" type="Texture" id=15]
[ext_resource path="res://Assets/characters/Slime/Idle/slime-idle-1.png" type="Texture" id=16]
[ext_resource path="res://Assets/characters/Slime/Idle/slime-idle-2.png" type="Texture" id=17]
[ext_resource path="res://Assets/characters/Slime/Idle/slime-idle-3.png" type="Texture" id=18]
[ext_resource path="res://Assets/characters/Slime/Walk/slime-move-0.png" type="Texture" id=19]
[ext_resource path="res://Assets/characters/Slime/Walk/slime-move-2.png" type="Texture" id=20]
[ext_resource path="res://Assets/characters/Slime/Walk/slime-move-1.png" type="Texture" id=21]
[ext_resource path="res://Assets/characters/Slime/Walk/slime-move-3.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": false,
"name": "Damage",
"speed": 4.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "Death",
"speed": 4.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 8.0

[sub_resource type="RayShape2D" id=3]
length = 40.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 10 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
attackrange = 20

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Attack"
frame = 5
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="FloorDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="PlayerDetector" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2

[node name="collision" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 5 )
disabled = true

[connection signal="body_entered" from="PlayerDetector" to="." method="PlayerDetected"]
